--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
             </div><br>
             <div>
                 <label>Dont have an account?</label><br>
-                <button type="submit"><a href="registration.html">Signup</a></button>
+                <button type="submit"><a href="index.html">Signup</a></button>
             </div>
            
         </form><br>
